--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,13 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            background-color: #f0f0f0;
         }
         table {
             margin: 0 auto;
             border-collapse: collapse;
             width: 80%;
+            background-color: white;
         }
         th, td {
             border: 1px solid black;
